--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,8 @@ jobs:
               uses: actions/setup-python@v2
               with:
                 python-version: ${{ matrix.python-version }}
+
+            - name: Check style with Pylint
+              run: |
+                python3 -m pylint --fail-under=0 --reports=y inflammation
         ...
